--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 
 <body>
-    <div id="content"></div>
+    <div id="input"></div>
+    <div id="output"></div>
 </body>
 
 <link rel="stylesheet" href="style.css"></style>
