JS number: fewest chars packers

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ for (const lang of Languages)
 <!-- files with packers go here -->
 <script src="./JS_packers/js_byte_to_char.js"></script>
 <script src="./JS_packers/js_number_bytes.js"></script>
+<script src="./JS_packers/js_number_chars.js"></script>
 
 <!-- html -->
 <script src="build_html.js"></script>
