Python 3:1 packer (sources unknown)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 // list of languages
 Languages = [
     "JavaScript",
+    "Python",
 ];
 
 // initializing global objects
@@ -34,6 +35,8 @@ for (const lang of Languages)
 <script src="./JS_packers/js_byte_to_char.js"></script>
 <script src="./JS_packers/js_number_bytes.js"></script>
 <script src="./JS_packers/js_number_chars.js"></script>
+
+<script src="./Python_packers/python_byte_to_char.js"></script>
 
 <!-- html -->
 <script src="build_html.js"></script>
