--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 Languages = [
     "JavaScript",
     "Python",
+    "C",
+    "C++",
 ];
 
 // initializing global objects
@@ -32,6 +34,9 @@ for (const lang of Languages)
 <script src="packer_types.js"></script>
 
 <!-- files with packers go here -->
+<script src="./C_packers/c_byte_to_char.js"></script>
+<script src="./C++_packers/c++_byte_to_char.js"></script>
+
 <script src="./JS_packers/js_byte_to_char.js"></script>
 <script src="./JS_packers/js_number_bytes.js"></script>
 <script src="./JS_packers/js_number_chars.js"></script>
