Add Python 2:1 packer, fix br

--- a/index.html
+++ b/index.html
@@ -1,80 +1,81 @@
 <!DOCTYPE html>
-
-<meta charset="UTF-8">
+<html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"></style>
 </head>
 
 <body>
     <div id="input"></div>
     <div id="output"></div>
-</body>
 
-<link rel="stylesheet" href="style.css"></style>
+    <!-- main code -->
+    <script type="text/javascript">
 
-<!-- main code -->
-<script type="text/javascript">
+    // list of languages
+    const Languages = [
+        "JavaScript",
+        "Python",
+        "C",
+        "C++",
+    ];
 
-// list of languages
-Languages = [
-    "JavaScript",
-    "Python",
-    "C",
-    "C++",
-];
+    // initializing global objects
+    const Packers = {};
+    for (const lang of Languages)
+        Packers[lang] = {};
 
-// initializing global objects
-const Packers = {};
-for (const lang of Languages)
-    Packers[lang] = {};
+    </script>
 
-</script>
+    <!-- other JS files -->
+    <script src="packer_types.js"></script>
 
-<!-- other JS files -->
-<script src="packer_types.js"></script>
+    <!-- files with packers go here -->
+    <script src="./C_packers/c_byte_to_char.js"></script>
+    <script src="./C++_packers/c++_byte_to_char.js"></script>
 
-<!-- files with packers go here -->
-<script src="./C_packers/c_byte_to_char.js"></script>
-<script src="./C++_packers/c++_byte_to_char.js"></script>
+    <script src="./JS_packers/js_byte_to_char.js"></script>
+    <script src="./JS_packers/js_number_bytes.js"></script>
+    <script src="./JS_packers/js_number_chars.js"></script>
 
-<script src="./JS_packers/js_byte_to_char.js"></script>
-<script src="./JS_packers/js_number_bytes.js"></script>
-<script src="./JS_packers/js_number_chars.js"></script>
+    <script src="./Python_packers/python_byte_to_char.js"></script>
 
-<script src="./Python_packers/python_byte_to_char.js"></script>
+    <!-- html -->
+    <script src="build_html.js"></script>
+    <script src="eventlisteners.js"></script>
 
-<!-- html -->
-<script src="build_html.js"></script>
-<script src="eventlisteners.js"></script>
+    <!-- apply packers -->
+    <script type="text/javascript">
 
-<!-- apply packers -->
-<script type="text/javascript">
+    // apply packers
+    function pack() {
+        const source = document.getElementById("source")
+            .value
+            .replace(/\n\r|\r\n/g, '\n');
+        const lang = document.querySelector('input[name="language_selector"]:checked').value;
+        const packer_type = document.querySelector('input[name="type_selector"]:checked').value;
+        const scorer = Packers.evaluators[packer_type];
 
-// apply packers
-function pack() {
-    const source = document.getElementById("source")
-        .value
-        .replace(/\n\r|\r\n/g, '\n');
-    const lang = document.querySelector('input[name="language_selector"]:checked').value;
-    const packer_type = document.querySelector('input[name="type_selector"]:checked').value;
-    const scorer = Packers.evaluators[packer_type];
-
-    let solutions = [];
-    let failures_html = "";
-    for (const method of Packers[lang][packer_type]) {
-        if (!method.validity_check(source)) {
-            failures_html += failed_to_html(method);
-            continue;
+        let solutions = [];
+        let failures_html = "";
+        for (const method of Packers[lang][packer_type]) {
+            if (!method.validity_check(source)) {
+                failures_html += failed_to_html(method);
+                continue;
+            }
+            solutions.push([method.packer(source), method]);
         }
-        solutions.push([method.packer(source), method]);
+        solutions.sort((elem1, elem2) => scorer(elem1[0]) - scorer(elem2[0]));
+
+        let solutions_html = "";
+        for (const solution of solutions)
+            solutions_html += solution_to_html(... solution);
+        
+        document.getElementById("output").innerHTML = solutions_html + failures_html;
     }
-    solutions.sort((elem1, elem2) => scorer(elem1[0]) - scorer(elem2[0]));
 
-    let solutions_html = "";
-    for (const solution of solutions)
-        solutions_html += solution_to_html(... solution);
-    
-    document.getElementById("output").innerHTML = solutions_html + failures_html;
-}
-
-</script>
+    </script>
+</body>
+</html>
