Add Elixir packers

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Languages = [
     "Python",
     "C",
     "C++",
+    "Elixir",
 ];
 
 // initializing global objects
@@ -42,6 +43,8 @@ for (const lang of Languages)
 <script src="./JS_packers/js_number_chars.js"></script>
 
 <script src="./Python_packers/python_byte_to_char.js"></script>
+
+<script src="./Elixir_packers/elixir_byte_to_char.js"></script>
 
 <!-- html -->
 <script src="build_html.js"></script>
