Added h1 title and <title>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Omni-Packer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -9,8 +10,11 @@
 </head>
 
 <body>
-    <div id="input"></div>
-    <div id="output"></div>
+    <h1>omni-packer</h1>
+    <div id="main">
+        <div id="input"></div>
+        <div id="output"></div>
+    </div>
 
     <!-- main code -->
     <script type="text/javascript">
