Added image links to menger sponge & github

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div id="input"></div>
         <div id="output"></div>
     </div>
+    <div id="links">
+        <a href="https://mengersponge.website/" title="Menger Sponge"><img src="./imgs/mengersponge.png"></a>
+        <a href="https://github.com/Irratix/Omni-packer" title="GitHub"><img class="invert" src="./imgs/github.png"></a>
+    </div>
 
     <!-- main code -->
     <script type="text/javascript">
