--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
         <div id="output"></div>
     </div>
     <div id="links">
-        <a href="https://mengersponge.website/" title="Menger Sponge"><img src="./imgs/mengersponge.png"></a>
-        <a href="https://github.com/Irratix/Omni-packer" title="GitHub"><img class="invert" src="./imgs/github.png"></a>
+        <a href="https://mengersponge.website/" title="Menger Sponge" target="_blank">
+            <img src="./imgs/mengersponge.png">
+        </a>
+        <a href="https://code.golf/" title="code.golf" target="_blank">
+            <img src="./imgs/codegolf.svg">
+        </a>
+        <a href="https://github.com/Irratix/Omni-packer" title="GitHub" target="_blank">
+            <img src="./imgs/github.png">
+        </a>
     </div>
 
     <!-- main code -->
