Added clisp + scheme, renamed to Common Lisp

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 "C",
                 "C++",
                 "Elixir",
+                "Common Lisp",
+                "Scheme",
             ];
 
             // initializing global objects
@@ -60,6 +62,10 @@
         <script src="./Python_packers/python_byte_to_char.js"></script>
 
         <script src="./Elixir_packers/elixir_byte_to_char.js"></script>
+
+        <script src="./CLISP_packers/clisp_byte_to_char.js"></script>
+
+        <script src="./Scheme_packers/scheme_byte_to_char.js"></script>
 
         <!-- html -->
         <script src="build_html.js"></script>
