Excluded scheme packer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 "C++",
                 "Elixir",
                 "Common Lisp",
-                "Scheme",
+                /*"Scheme", [not working yet] */
             ];
 
             // initializing global objects
