Changed relative filepaths

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </div>
         <div id="links">
             <a href="https://mengersponge.website/" title="Menger Sponge" target="_blank">
-                <img src="./_imgs/mengersponge.png">
+                <img src="_imgs/mengersponge.png">
             </a>
             <a href="https://code.golf/" title="code.golf" target="_blank">
-                <img src="./_imgs/codegolf.svg">
+                <img src="_imgs/codegolf.svg">
             </a>
             <a href="https://github.com/Irratix/Omni-packer" title="GitHub" target="_blank">
-                <img src="./_imgs/github.png">
+                <img src="_imgs/github.png">
             </a>
         </div>
         
